update controller + swagger info
